--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,18 +1,32 @@
 name: Docker Image CI
-
 on:
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag bsvogler/gpu-runpod-controller:$(date +%s)
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+      
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+      
+    - name: Build and tag Docker image
+      run: |
+        TAG=$(date +%s)
+        echo "TAG=$TAG" >> $GITHUB_ENV
+        docker build . --file Dockerfile --tag bsvogler/gpu-runpod-controller:$TAG --tag ghcr.io/${{ github.repository_owner }}/gpu-runpod-controller:$TAG --tag ghcr.io/${{ github.repository_owner }}/gpu-runpod-controller:latest
+    
+    - name: Push to GitHub Container Registry
+      run: |
+        docker push ghcr.io/${{ github.repository_owner }}/gpu-runpod-controller:${{ env.TAG }}
+        docker push ghcr.io/${{ github.repository_owner }}/gpu-runpod-controller:latest
