--- a/deploy/runpod-controller.yaml
+++ b/deploy/runpod-controller.yaml
@@ -11,20 +11,6 @@ spec:
   taints:
   - key: runpod.io/virtual
     effect: NoSchedule
-status:
-  conditions:
-  - type: Ready
-    status: "True"
-  allocatable:
-    cpu: "0"
-    memory: "0"
-    pods: "100"
-    nvidia.com/gpu: "0"
-  capacity:
-    cpu: "0"
-    memory: "0"
-    pods: "100"
-    nvidia.com/gpu: "0"
 ---
 apiVersion: node.k8s.io/v1
 kind: RuntimeClass
@@ -86,9 +72,11 @@ spec:
         app: runpod-controller
     spec:
       serviceAccountName: runpod-controller
+      imagePullSecrets:
+        - name: regcred
       containers:
       - name: controller
-        image: bsvogler/runpod-controller:latest
+        image: ghcr.io/bsvogler/gpu-runpod-controller:latest
         args:
         - "--reconcile-interval=30"
         - "--pending-job-threshold=5"
