--- a/deploy/kubelet.yaml
+++ b/deploy/kubelet.yaml
@@ -9,6 +9,9 @@ rules:
     resources: ["pods", "nodes", "nodes/status", "namespaces", "configmaps", "secrets"]
     verbs: ["get", "list", "watch", "create", "delete", "update", "patch"]
   - apiGroups: [""]
+    resources: ["services"]
+    verbs: ["list", "watch"]
+  - apiGroups: [""]
     resources: ["pods/status"]
     verbs: ["update", "patch"]
   - apiGroups: [""]
