on config changes run

--- a/.github/workflows/helm-publish.yml
+++ b/.github/workflows/helm-publish.yml
@@ -6,8 +6,10 @@ on:
       - master
     paths:
       - 'helm/**'
+      - '.github/workflows/helm-publish.yml'
   release:
     types: [created]
+  workflow_dispatch:
 
 permissions:
   contents: read
