--- a/helm/runpod-kubelet/values.yaml
+++ b/helm/runpod-kubelet/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: ghcr.io/bsvogler/runpod-kubelet
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   tag: "latest"
 
 imagePullSecrets:
