--- a/helm/runpod-kubelet/templates/secret.yaml
+++ b/helm/runpod-kubelet/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if and (not .Values.runpod.existingSecret) .Values.runpod.apiKey -}}
+{{- if and (not .Values.runpod.existingSecret) (or .Values.runpod.apiKey .Values.conduit.apiToken) -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,5 +8,10 @@ metadata:
     {{- include "runpod-kubelet.labels" . | nindent 4 }}
 type: Opaque
 stringData:
+  {{- if .Values.runpod.apiKey }}
   RUNPOD_API_KEY: {{ .Values.runpod.apiKey | quote }}
+  {{- end }}
+  {{- if .Values.conduit.apiToken }}
+  CONDUIT_API_TOKEN: {{ .Values.conduit.apiToken | quote }}
+  {{- end }}
 {{- end }}
